set this month as firth in options

--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
 			<option value="November">November</option>
 			<option value="December">December</option>
 		</select>
-		<p>Choose first month:</p>
-		<label for="thisMonth">This</label>
-		<input type="radio" name="firstMonth" id="thisMonth" checked>
-		<label for="nextMonth">Next</label>
-		<input type="radio" name="firstMonth" id="nextMonth">
+		<section class="radio">
+			<p>Choose first month:</p>
+			<label for="thisMonth">This</label>
+			<input type="radio" name="firstMonth" id="thisMonth" checked>
+			<label for="nextMonth">Next</label>
+			<input type="radio" name="firstMonth" id="nextMonth">
+		</section>
 	</form>
-	<section></section>
+	<section class="text"></section>
 <script src="main.js"></script>
 </body>
 </html>
