Added radio.addEventListener and fixed changing yaers and month etc.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 		<section class="radio">
 			<p>Choose first month:</p>
 			<label for="thisMonth">This</label>
-			<input type="radio" name="firstMonth" id="thisMonth" checked>
+			<input type="radio" name="firstMonth" id="thisMonth" value="this" checked>
 			<label for="nextMonth">Next</label>
-			<input type="radio" name="firstMonth" id="nextMonth">
+			<input type="radio" name="firstMonth" id="nextMonth" value="next">
 		</section>
 	</form>
 	<section class="text"></section>
