Added button copy To Clipboard

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<input type="radio" name="firstMonth" id="thisMonth" value="this" checked>
 			<label for="nextMonth">Next</label>
 			<input type="radio" name="firstMonth" id="nextMonth" value="next">
+			<button class="copyToClipboard">Copy to clipboard</button>
 		</section>
 	</form>
 	<section class="text"></section>
